info.css
@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap');

body {
    background-image: url(Images/360_F_270252931_bHV05iyLL4pZTnzH5S78Pc8dMpXh1mMS.jpg);
    background-repeat: no-repeat;
    background-size: cover;
}

#mainbody {
   background-color: lightblue;
   padding: 5px 20px 20px 20px;
   border-radius: 4px;
   border-style: solid;
}

body {
    background-color:lightblue; 
    font-family: "Rowdies", sans-serif;

}
#heading {
    align-items: center;

}
h1 {
    text-align: center;
}
li {
    border-radius: 10px;
    background-color: darkgreen;
    color: white;
    margin: 20px;
    padding: 20px;
    border-style: solid;
    border-color: black;
    border-radius: 10px;
}

button {
    background-color: blue;
    color: white;
    border-radius: 5px;
    stroke: black;
    stroke-width: 10px;
    padding: 10px;
    font-size: 20px;
}

#description {
    margin: 10px;
}
.links > a {
    margin: 50px;
    padding: 20px;
    background-color: blue;
    color: white;
    border-radius: 10px;
}
.links {
    text-align: center;
}

@media (max-width: 470px) {
    .links>a{
        margin: 0px;
    }
}

